criando dominio do usuario